# column-semantics

./: README.md  main.py  pyproject.toml
column_semantics/: __init__.py
column_semantics/core/: __init__.py  results.py
column_semantics/core/analysis/: __init__.py  analyze_columns.py
column_semantics/core/analyzer/: __init__.py  analyzer.py
column_semantics/core/detectors/: __init__.py  abbreviation_detector.py  base.py  currency_detector.py  datatype_detector.py  date_detector.py  role_detector.py
column_semantics/core/engine/: __init__.py  confidence_engine.py  inference_engine.py  rules_engine.py
column_semantics/core/knowledge/: abbreviations.yml  currencies.yml  data_types.yml  dates.yml  roles.yml  rules.yml  stopwords.yml
column_semantics/core/loader/: __init__.py  knowledge_loader.py
column_semantics/core/models/: __init__.py  detection_models.py  output_models.py
column_semantics/core/normalizer/: __init__.py  normalizer.py
column_semantics/core/reporter_generator/: __init__.py  pdf_generator.py  report_generator.py
column_semantics/engine/: __init__.py  evidence_engine.py
column_semantics/models/: __init__.py  evidence_models.py  response_models.py
column_semantics/rules/: __init__.py  id_rules.py
column_semantics/utils/: __init__.py  enums.py  validate_columns_names.py
column_semantics/validators/: __init__.py
docs/: COLUMNS_ANALYSIS.md
examples/: 01_basic_analysis.py  02_report_generation.py  03_practical_recommendations.py  04_complete_analysis.py  __init__.py  example_report_generator.py
(+3 files in other folders)
